two new projects

--- a/projects/2023-08-06-eternity.html
+++ b/projects/2023-08-06-eternity.html
@@ -39,16 +39,16 @@
 		<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
 		
 		<!-- Animate.css -->
-		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href="../css/animate.css">
 		<!-- Icomoon Icon Fonts-->
-		<link rel="stylesheet" href="css/icomoon.css">
+		<link rel="stylesheet" href="../css/icomoon.css">
 		<!-- Bootstrap  -->
-		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="../css/bootstrap.css">
 		<!-- Theme style  -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="../css/style.css">
 	
 		<!-- Modernizr JS -->
-		<script src="js/modernizr-2.6.2.min.js"></script>
+		<script src="../js/modernizr-2.6.2.min.js"></script>
 		<!-- FOR IE9 below -->
 		<!--[if lt IE 9]>
 		<script src="js/respond.min.js"></script>
@@ -63,96 +63,79 @@
 		<nav class="fh5co-nav" role="navigation">
 			<div class="container">
 				<div class="fh5co-top-logo">
-					<div id="fh5co-logo"><a href="index.html">Juliana Iasi</a></div>
+					<div id="fh5co-logo"><a href="../index.html">Juliana Iasi</a></div>
 				</div>
 				<div class="fh5co-top-menu menu-1 text-center">
 					<ul>
-						<li><a href="index.html">Work</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="../index.html">Work</a></li>
+						<li><a href="../contact.html">Contact</a></li>
 					</ul>
 				</div>
 				<div class="fh5co-top-social menu-1 text-right">
 					<ul class="fh5co-social">
 						<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
-						<!-- <li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li> -->
-						<li><a href="https://www.linkedin.com/in/juliana-iasi/" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	
-	<div id="fh5co-contact">
-		<div class="container">
+	<div id="fh5co-author">
+		<div id="project-content" class="container animate-box">
 			<div class="row top-line">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Contact</h2>
-				</div>
-			</div>
-			<div class="row top-line">
-				<div class="col-md-10 col-md-offset-1">
-					<div class="author">
-						<div class="author-inner" style="background-image: url(images/julianaiasi-portrait.png);">
-						</div>
-						<div class="desc">
-							<span>Illustrator & character design</span>
-							<h3>Juliana Iasi</h3>
-							<p>I am a professional freelancer illustrator and character design based in the state of São Paulo, Brazil, since 2019 working between illustration, layout, animation and games.</p>
-							<p>I worked for four years as web designer, then a year as an artist of mobile game assets (UI elements, animated scenarios and characters) and then also illustrated some books, card games, presentations, advertising and short 2D animations for social media, in addition to layout work.</p>
-							<p>Some themes I usually work on (but not only) are: cute and funny characters, nature, fantasy and children books.</p>
-							<ul class="fh5co-social-icons">
-								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
-								<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
-								<!-- <li><a href="https://twitter.com/julianaiasi" target="_blank"><i class="icon-twitter"></i></a></li> -->
-								<li><a href="https://www.linkedin.com/in/juliana-iasi/" target="_blank"><i class="icon-linkedin"></i></a></li>
-							</ul>
-						</div>
+				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
+					<h2>Eternity is right there</h2>
+					
+					<div class="role">
+						<h3>Role</h3>
+						<ul>
+							<li>Promotional Illustration</li>
+							<li>Print</li>
+							<li>Colored pencils</li>
+						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-10 col-md-offset-1">
-					<div class="col-md-5">
-						<div class="fh5co-contact-info">
-							<h3>Contact Information</h3>
-							<ul>
-								<li class="address">São Paulo - SP, Brazil</li>
-								<!-- <li class="phone"><a href="tel://1234567920">+ 1235 2355 98</a></li> -->
-								<li class="email"><a href="mailto:juiasi.art@gmail.com">juiasi.art@gmail.com</a></li>
-								<li class="url"><a href="https://juiasi.github.io">juiasi.github.io</a></li>
-							</ul>
+				<div class="col-md-12">
+					<p><img src="../images/projects/2023-08-06-eternity/eternity-print-illustration.png" class="img-responsive" alt="Illustration of two children, a boy and a girl, looking to the sunset, and and a text that says 'Eternity is right there' in portuguese"></p>
+					<p><img src="../images/projects/2023-08-06-eternity/eternity-detail1.png" class="img-responsive" alt="Zoom showing the kids of the illustration above."></p>
+					<p><img src="../images/projects/2023-08-06-eternity/eternity-detail2.png" class="img-responsive" alt="Zoom showing the kids of the illustration above."></p>
+				</div>
+					<!-- <div class="testimony animate-box">
+						<blockquote>
+							<p>xxxx</p>
+							<p class="person"><cite>&mdash; xxxx</cite> xxxx</p>
+						</blockquote>
+					</div> -->
+				<div class="col-md-8 col-md-offset-2">
+					<div class="text-center">
+						<a href="../index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All Projects</a>
+					</div>
+					<!-- <div class="row row-pt-md portfolio-navigation">
+						<div class="col-xs-4 text-left">
+							<a href="#" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
 						</div>
-					</div>
-					<div class="col-md-7">
-						<h3>Get In Touch</h3>
-						<form action="mailto:juiasi.art@gmail.com">
-							<div class="row form-group">
-								<div class="col-md-12">
-									<label for="fname">Your Name</label>
-									<input type="text" id="fname" class="form-control">
-								</div>
-								
-							</div>
+						<div class="text-center">
+							<a href="index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All Projects</a>
+						</div>
+						<div class="col-xs-4 text-right">
+							<a href="#" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
+						</div>
+					</div> -->
+				</div>
+			</div>
+		</div>
+	</div>
 
-							<div class="row form-group">
-								<div class="col-md-12">
-									<label for="email">Email</label>
-									<input type="text" id="email" class="form-control">
-								</div>
-							</div>
-
-							<div class="row form-group">
-								<div class="col-md-12">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" cols="30" rows="10" class="form-control"></textarea>
-								</div>
-							</div>
-							<div class="form-group">
-								<input type="submit" value="Send Message" class="btn btn-primary">
-							</div>
-
-						</form>		
-					</div>
+	<div id="fh5co-started">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Get Started</h2>
+					<p>I create beautiful illustrations, concept arts and short 2D animations.</p>
+					<p><a href="../contact.html" class="btn btn-primary">Let's work together</a></p>
 				</div>
 			</div>
 		</div>
@@ -186,15 +169,15 @@
 	</div>
 	
 	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	<script src="../js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="../js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="../js/jquery.waypoints.min.js"></script>
 	<!-- Main -->
-	<script src="js/main.js"></script>
+	<script src="../js/main.js"></script>
 
 	</body>
 </html>
