--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Juliana Iasi | Illustrator</title>
-	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Juliana Iasi | Illustrator and Graphic designer" />
-	<meta name="keywords" content="illustrator, illustration, book, animation, graphic design, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
-	<meta name="author" content="FreeHTML5.co" />
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Juliana Iasi | Illustrator and Graphic Designer"/>
-	<meta property="og:image" content="https://juiasi.github.io/images/cover-social-media.png"/>
-	<meta property="og:url" content="https://juiasi.github.io/"/>
-	<meta property="og:site_name" content="Juliana Iasi | Illustrator"/>
-	<meta property="og:description" content="Portfolio of illustrations and character designs by Juliana Iasi"/>
-	<meta property="fb:admins" content="juiasi"/>
-	<meta name="twitter:title" content="Juliana Iasi | Illustrator and Graphic Designer" />
-	<meta name="twitter:image" content="https://juiasi.github.io/images/cover-social-media.png" />
-	<meta name="twitter:url" content="https://juiasi.github.io/" />
-	<meta name="twitter:card" content="summary" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Juliana Iasi | Illustrator</title>
+		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Juliana Iasi | Illustrator and character designer" />
+		<meta name="keywords" content="illustrator, illustration, book, animation, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
+		<meta name="author" content="FreeHTML5.co" />
+	
+		<!-- 
+		//////////////////////////////////////////////////////
+	
+		FREE HTML5 TEMPLATE 
+		DESIGNED & DEVELOPED by FreeHTML5.co
+			
+		Website: 		http://freehtml5.co/
+		Email: 			info@freehtml5.co
+		Twitter: 		http://twitter.com/fh5co
+		Facebook: 		https://www.facebook.com/fh5co
+	
+		//////////////////////////////////////////////////////
+		 -->
+	
+		  <!-- Facebook and Twitter integration -->
+		<meta property="og:title" content="Juliana Iasi | Illustrator and Character Designer"/>
+		<meta property="og:image" content="https://juiasi.github.io/images/cover-social-media.png"/>
+		<meta property="og:url" content="https://juiasi.github.io/"/>
+		<meta property="og:site_name" content="Juliana Iasi | Illustrator"/>
+		<meta property="og:description" content="Portfolio of illustrations and character designs by Juliana Iasi"/>
+		<meta property="fb:admins" content="juiasi"/>
+		<meta name="twitter:title" content="Juliana Iasi | Illustrator and Character Designer" />
+		<meta name="twitter:image" content="https://juiasi.github.io/images/cover-social-media.png" />
+		<meta name="twitter:url" content="https://juiasi.github.io/" />
+		<meta name="twitter:card" content="summary" />
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
 	
@@ -91,7 +91,7 @@
 							<div class="main-banner">
 								<div class="desc">
 									<h1>Hi, I'm Juliana Iasi</h1>
-									<span>illustrator and graphic designer</span>
+									<span>illustrator and character design</span>
 								</div>
 							</div>
 						</div>
@@ -191,12 +191,12 @@
 					</div>
 		
 					<div class="col-md-4 text-center">
-						<a class="work" href="projects/2020-07-30-funny-taiga.html">
-							<div class="work-grid" style="background-image:url(images/thumbs/taiga-thumb.png);">
+						<a class="work" href="projects/2023-03-31-sofia-penelope.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/sofia-penelope-thumb.gif);">
 								<div class="inner">
 									<div class="desc">
-										<h3>Funny Taiga</h3>
-										<span class="cat">Pattern</span>
+										<h3>Sofia & Penélope</h3>
+										<span class="cat">2D animation</span>
 									</div>
 								</div>
 							</div>
@@ -217,12 +217,38 @@
 					</div>
 
 					<div class="col-md-4 text-center">
-						<a class="work" href="projects/2023-03-31-sofia-penelope.html">
-							<div class="work-grid" style="background-image:url(images/thumbs/sofia-penelope-thumb.gif);">
+						<a class="work" href="projects/2020-07-30-funny-taiga.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/taiga-thumb.png);">
 								<div class="inner">
 									<div class="desc">
-										<h3>Sofia & Penélope</h3>
-										<span class="cat">2D animation</span>
+										<h3>Funny Taiga</h3>
+										<span class="cat">Pattern</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 text-center">
+						<a class="work" href="projects/2023-06-01-emilly.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/emilly-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Emilly and the Crystal Castle</h3>
+										<span class="cat">book cover</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 text-center">
+						<a class="work" href="projects/2023-08-06-eternity.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/eternity.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Eternity is right there</h3>
+										<span class="cat">illustration</span>
 									</div>
 								</div>
 							</div>
@@ -288,9 +314,9 @@
 						<div class="author-inner" style="background-image: url(images/julianaiasi-portrait.png);">
 						</div>
 						<div class="desc">
-							<span>Illustrator & Graphic Designer</span>
+							<span>Illustrator & character design</span>
 							<h3>Juliana Iasi</h3>
-							<p>Hello, I am a professional freelancer illustrator and graphic designer based in the state of São Paulo, Brazil, since 2019 working between illustration, layout, animation and games.</p>
+							<p>Hello, I am a professional freelancer illustrator and character design based in the state of São Paulo, Brazil, since 2019 working between illustration, layout, animation and games.</p>
 							<p><a href="contact.html" class="btn btn-primary btn-outline">Learn More</a></p>
 							<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
