update template + new project + signature

--- a/projects/2023-08-07-minimap-massape.html
+++ b/projects/2023-08-07-minimap-massape.html
@@ -85,30 +85,21 @@
 		<div id="project-content" class="container animate-box">
 			<div class="row top-line">
 				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
-					<h2>Classroom illustration</h2>
+					<h2>Minimap of the Kingdom of Massape</h2>
 					
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>kid Illustration</li>
-							<li>Schoolbook</li>
-							<li>Digital Paiting</li>
+							<li>Digital Painting</li>
+							<li>Website illustration</li>
+							<li>Map</li>
 						</ul>
 					</div>
-
-					<p><a target="_blank" href="https://www.behance.net/gallery/117777337/Classroom-illustration" class="btn btn-primary">Visit on Behance</a></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<figure>
-						<img src="../images/projects/2021-04-18-class/class.png" class="img-responsive" alt="Illustration of a black teacher in red clothes teaching children of different ethnicities. The room is in salmon tones and a blackboard, a window and a world map appear in the background.">
-						<figcaption>The classroom</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-8 col-md-offset-2">
-					<p><img src="../images/projects/2021-04-18-class/class-detail1.jpg" class="img-responsive" alt="Zoom showing the teacher of the illustration above."></p>
-					<p><img src="../images/projects/2021-04-18-class/class-detail2.jpg" class="img-responsive" alt="Zoom showing the kids of the illustration above."></p>
+					<p><img src="../images/projects/2023-08-07-minimap-massape/minimap-massape.png" class="img-responsive" alt="Map containing the Kingdom"></p>
 				</div>
 					<!-- <div class="testimony animate-box">
 						<blockquote>
