--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">Juliana Iasi</a></div>
+				<div id="fh5co-logo"><a href="index.html"><img src="images/logo.png"/><span>Juliana Iasi</span></a></div>
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
@@ -255,6 +255,19 @@
 						</a>
 					</div>
 	
+					<div class="col-md-4 text-center">
+						<a class="work" href="projects/2023-08-07-minimap-massape.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/minimap-massape-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Minimap of the Kingdom of Massape</h3>
+										<span class="cat">Illustration</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
 					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2022-04-22-animated-islands.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/islands-thumbs.png);">
