--- a/images/signature/signature.html
+++ b/images/signature/signature.html
@@ -20,7 +20,7 @@
             <tr>
                 <td width="136px" style="vertical-align: top;"><img width="120px" height="120px" src="https://juiasi.github.io/images/signature/photo.png"/></td>
                 <td>
-                    <strong style="font-size: 24px; color: rgb(73, 73, 73); ">Juliana Iasi</strong>
+                    <span style="font-size: 24px; color: rgb(73, 73, 73); ">Juliana Iasi</span>
                     <br/>
                     <strong style="text-transform: uppercase; font-size: 14px;">Illustrator & Character Designer</strong>
                     <br/>
