--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
 				<div id="work-thumbs animate-box">
 
 					<div class="col-md-4 text-center">
+						<a class="work" href="projects/2023-08-07-template-fantastic-animals.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/fantastic-animals-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Fantastic Animals of the Kingdom</h3>
+										<span class="cat">Presentation Template</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2023-04-18-robbert.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/frog-thumb.png);">
 								<div class="inner">
