--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
 				<div id="work-thumbs animate-box">
 
 					<div class="col-md-4 text-center">
+						<a class="work" href="projects/2024-02-28-pinheirinho.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/pinheirinho-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>The legend of the little pine tree</h3>
+										<span class="cat">Book Illustrations</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+		
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2023-08-07-template-fantastic-animals.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/fantastic-animals-thumb.png);">
 								<div class="inner">
