--- a/projects/2021-01-31-alice-in-wonderland.html
+++ b/projects/2021-01-31-alice-in-wonderland.html
@@ -6,7 +6,7 @@
 		<title>Juliana Iasi | Illustrator</title>
 		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Juliana Iasi | Illustrator and character designer" />
+		<meta name="description" content="Juliana Iasi | illustrator and book designer" />
 		<meta name="keywords" content="illustrator, illustration, book, animation, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
 		<meta name="author" content="FreeHTML5.co" />
 	
@@ -25,13 +25,13 @@
 		 -->
 	
 		  <!-- Facebook and Twitter integration -->
-		<meta property="og:title" content="Juliana Iasi | Illustrator and Character Designer"/>
+		<meta property="og:title" content="Juliana Iasi | illustrator and book designer"/>
 		<meta property="og:image" content="https://juiasi.github.io/images/cover-social-media.png"/>
 		<meta property="og:url" content="https://juiasi.github.io/"/>
 		<meta property="og:site_name" content="Juliana Iasi | Illustrator"/>
-		<meta property="og:description" content="Portfolio of illustrations and character designs by Juliana Iasi"/>
+		<meta property="og:description" content="Portfolio of illustration and book design by Juliana Iasi"/>
 		<meta property="fb:admins" content="juiasi"/>
-		<meta name="twitter:title" content="Juliana Iasi | Illustrator and Character Designer" />
+		<meta name="twitter:title" content="Juliana Iasi | illustrator and book designer" />
 		<meta name="twitter:image" content="https://juiasi.github.io/images/cover-social-media.png" />
 		<meta name="twitter:url" content="https://juiasi.github.io/" />
 		<meta name="twitter:card" content="summary" />
@@ -148,7 +148,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Get Started</h2>
-					<p>I create beautiful illustrations, concept arts and short 2D animations.</p>
+					<p>I create beautiful illustrations and design of books.</p>
 					<p><a href="../contact.html" class="btn btn-primary">Let's work together</a></p>
 				</div>
 			</div>
