--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 		<title>Juliana Iasi | Illustrator</title>
 		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Juliana Iasi | Illustrator and character designer" />
+		<meta name="description" content="Juliana Iasi | illustrator and book designer" />
 		<meta name="keywords" content="illustrator, illustration, book, animation, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
 		<meta name="author" content="FreeHTML5.co" />
 	
@@ -25,13 +25,13 @@
 		 -->
 	
 		  <!-- Facebook and Twitter integration -->
-		<meta property="og:title" content="Juliana Iasi | Illustrator and Character Designer"/>
+		<meta property="og:title" content="Juliana Iasi | illustrator and book designer"/>
 		<meta property="og:image" content="https://juiasi.github.io/images/cover-social-media.png"/>
 		<meta property="og:url" content="https://juiasi.github.io/"/>
 		<meta property="og:site_name" content="Juliana Iasi | Illustrator"/>
-		<meta property="og:description" content="Portfolio of illustrations and character designs by Juliana Iasi"/>
+		<meta property="og:description" content="Portfolio of illustration and book design by Juliana Iasi"/>
 		<meta property="fb:admins" content="juiasi"/>
-		<meta name="twitter:title" content="Juliana Iasi | Illustrator and Character Designer" />
+		<meta name="twitter:title" content="Juliana Iasi | illustrator and book designer" />
 		<meta name="twitter:image" content="https://juiasi.github.io/images/cover-social-media.png" />
 		<meta name="twitter:url" content="https://juiasi.github.io/" />
 		<meta name="twitter:card" content="summary" />
@@ -95,11 +95,11 @@
 						<div class="author-inner" style="background-image: url(images/julianaiasi-portrait.png);">
 						</div>
 						<div class="desc">
-							<span>Illustrator & character design</span>
+							<span>Illustrator & book designer</span>
 							<h3>Juliana Iasi</h3>
-							<p>I am a professional freelancer illustrator and character design based in the state of São Paulo, Brazil, since 2019 working between illustration, layout, animation and games.</p>
-							<p>I worked for four years as web designer, then a year as an artist of mobile game assets (UI elements, animated scenarios and characters) and then also illustrated some books, card games, presentations, advertising and short 2D animations for social media, in addition to layout work.</p>
-							<p>Some themes I usually work on (but not only) are: cute and funny characters, nature, fantasy and children books.</p>
+							<p>Juliana is a professional freelancer illustrator and book designer based in the state of São Paulo, Brazil, since 2019 working with illustration, design, animation and games.</p>
+							<p>She worked for five years as web designer and artist of mobile game assets (UI elements, animated scenarios and characters) and then also illustrated some books, card games, presentations, advertising and short 2D animations for social media, in addition to book design. Recently, she illustrated four published children's books.</p>
+							<p>Her illustrations are worked in a variety of techniques, including gouache, colored pencils, oil pastels, watercolors and digital painting.</p>
 							<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
 								<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
