--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
 							<h3>Juliana Iasi</h3>
 							<p>Juliana is a professional freelancer illustrator and book designer based in the state of São Paulo, Brazil, since 2019 working with illustration, design, animation and games.</p>
 							<p>She worked for five years as web designer and artist of mobile game assets (UI elements, animated scenarios and characters) and then also illustrated some books, card games, presentations, advertising and short 2D animations for social media, in addition to book design. Recently, she illustrated four published children's books.</p>
-							<p>Her illustrations are worked in a variety of techniques, including gouache, colored pencils, oil pastels, watercolors and digital painting.</p>
+							<p>Her illustrations are created using a variety of techniques, including gouache, colored pencils, oil pastels, watercolors and digital painting.</p>
 							<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
 								<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
