--- a/projects/2023-02-06-eyes-book.html
+++ b/projects/2023-02-06-eyes-book.html
@@ -91,7 +91,7 @@
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Child Book Illustration</li>
+							<li>Children's Book Illustration</li>
 							<li>Character design</li>
 							<li>Digital Paiting</li>
 						</ul>
