--- a/projects/2023-03-08-professional-girls.html
+++ b/projects/2023-03-08-professional-girls.html
@@ -91,7 +91,7 @@
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Kid Illustration</li>
+							<li>Children's Illustration</li>
 							<li>Character design</li>
 							<li>Advertising</li>
 							<li>Digital Paiting</li>
