--- a/projects/2023-08-07-template-fantastic-animals.html
+++ b/projects/2023-08-07-template-fantastic-animals.html
@@ -92,7 +92,7 @@
 						<h3>Role</h3>
 					
 						<ul>
-							<li>kid Illustration</li>
+							<li>Children's Illustration</li>
 							<li>Template for Presentation</li>
 							<li>Design</li>
 						</ul>
