--- a/projects/2024-02-28-pinheirinho.html
+++ b/projects/2024-02-28-pinheirinho.html
@@ -91,7 +91,7 @@
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Child Book Illustration</li>
+							<li>Children's Book Illustration</li>
 							<li>Oil pastel painting</li>
 							<li>Lettering</li>
 						</ul>
