--- a/projects/2024-03-20-zita.html
+++ b/projects/2024-03-20-zita.html
@@ -85,52 +85,86 @@
 		<div id="project-content" class="container animate-box">
 			<div class="row top-line">
 				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
-					<h2>Classroom illustration</h2>
+					<h2>Zita, a mosquita erudita</h2>
+					<p>“Zita, a mosquita erudita”, which in portuguese means “Zita, the erudite mosquito”, is a story by Juliana Amato, published by “João e Maria”, about Zita, a little mosquito who discovered her place in the world of music. As illustrator, I pre-diagrammed, sketched digitally and finished with gouache paint.</p>
 					
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Children's Illustration</li>
-							<li>Schoolbook</li>
-							<li>Digital Paiting</li>
+							<li>Children's Book Illustration</li>
+							<li>Gouache painting</li>
+							<li>Layout design</li>
 						</ul>
 					</div>
 
-					<p><a target="_blank" href="https://www.behance.net/gallery/117777337/Classroom-illustration" class="btn btn-primary">Visit on Behance</a></p>
+					<p><a target="_blank" href="https://www.behance.net/gallery/194406773/Book-illustration-Zita-the-erudite-mosquito" class="btn btn-primary">Visit on Behance</a></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12">
 					<figure>
-						<img src="../images/projects/2021-04-18-class/class.png" class="img-responsive" alt="Illustration of a black teacher in red clothes teaching children of different ethnicities. The room is in salmon tones and a blackboard, a window and a world map appear in the background.">
-						<figcaption>The classroom</figcaption>
+						<img src="../images/projects/2024-03-20-zita/img1-zita.png" class="img-responsive" alt="book cover">
 					</figure>
 				</div>
-				<div class="col-md-8 col-md-offset-2">
-					<p><img src="../images/projects/2021-04-18-class/class-detail1.jpg" class="img-responsive" alt="Zoom showing the teacher of the illustration above."></p>
-					<p><img src="../images/projects/2021-04-18-class/class-detail2.jpg" class="img-responsive" alt="Zoom showing the kids of the illustration above."></p>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img2-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
 				</div>
-					<!-- <div class="testimony animate-box">
-						<blockquote>
-							<p>xxxx</p>
-							<p class="person"><cite>&mdash; xxxx</cite> xxxx</p>
-						</blockquote>
-					</div> -->
-				<div class="col-md-8 col-md-offset-2">
-					<div class="text-center">
-						<a href="../index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All Projects</a>
-					</div>
-					<!-- <div class="row row-pt-md portfolio-navigation">
-						<div class="col-xs-4 text-left">
-							<a href="#" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
-						</div>
-						<div class="text-center">
-							<a href="index.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All Projects</a>
-						</div>
-						<div class="col-xs-4 text-right">
-							<a href="#" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
-						</div>
-					</div> -->
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img3-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img4-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img5-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img6-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img7-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img8-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img9-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img10-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img11-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img12-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
+				</div>
+				<div class="col-md-12">
+					<figure>
+						<img src="../images/projects/2024-03-20-zita/img13-zita.png" class="img-responsive" alt="illustration from Zita's book">
+					</figure>
 				</div>
 			</div>
 		</div>
