--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
 				<div id="work-thumbs animate-box">
 
 					<div class="col-md-4 text-center">
+						<a class="work" href="projects/2024-03-20-zita.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/zita-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Zita, the erudite mosquito</h3>
+										<span class="cat">Book Illustrations</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+					
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2024-02-28-pinheirinho.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/pinheirinho-thumb.png);">
 								<div class="inner">
