--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<div class="inner">
 									<div class="desc">
 										<h3>Zita, the erudite mosquito</h3>
-										<span class="cat">Book Illustrations</span>
+										<span class="cat">Children's Book illustration</span>
 									</div>
 								</div>
 							</div>
@@ -118,7 +118,7 @@
 								<div class="inner">
 									<div class="desc">
 										<h3>The legend of the little pine tree</h3>
-										<span class="cat">Book Illustrations</span>
+										<span class="cat">Children's Book illustration</span>
 									</div>
 								</div>
 							</div>
@@ -144,7 +144,7 @@
 								<div class="inner">
 									<div class="desc">
 										<h3>The brilliant Robbert</h3>
-										<span class="cat">Book Illustrations</span>
+										<span class="cat">Children's Book illustration</span>
 									</div>
 								</div>
 							</div>
@@ -157,7 +157,7 @@
 								<div class="inner">
 									<div class="desc">
 										<h3>The eyes that didn't want to sleep</h3>
-										<span class="cat">Book Illustrations</span>
+										<span class="cat">Children's Book illustration</span>
 									</div>
 								</div>
 							</div>
