--- a/projects/2023-04-18-robbert.html
+++ b/projects/2023-04-18-robbert.html
@@ -98,30 +98,67 @@
 						</ul>
 					</div>
 
+					<p><a target="_blank" href="https://www.behance.net/gallery/201347347/Childrens-Book-illustration-The-brilliant-Robbert" class="btn btn-primary">Visit on Behance</a></p>
+
 				</div>
 			</div>
 			<div class="row">
                 <div class="col-md-12">
 					<p>
-						<img src="../images/projects/2023-04-18-robbert/robbert-mockup.png" class="img-responsive" alt="Mockup of the book cover">
+						<img src="../images/projects/2023-04-18-robbert/mockup-semtexto.png" class="img-responsive" alt="Mockup of the book cover">
                     </p>
 				</div>
-                <div class="col-md-6">
+
+                <div class="col-md-12">
 					<figure>
-						<img src="../images/projects/2023-04-18-robbert/robbert-capa.png" class="img-responsive" alt="Book cover containing a shining frog in the center and other animals from the Pantanal admired around it, with the title 'The brilliant Robbert'">
-						<figcaption>Final book cover</figcaption>
+						<img src="../images/projects/2023-04-18-robbert/img1.png" class="img-responsive" alt="Skecthes of the frog in varied poses and Details of the book cover">
+						<figcaption>Main character and cover studies</figcaption>
 					</figure>
 				</div>
                 
 				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-04-18-robbert/robbert-sketches.png" class="img-responsive" alt="Skecthes of the frog in varied poses">
-						<figcaption>Main character studies</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-8 col-md-offset-2">
 					<p>
-						<img src="../images/projects/2023-04-18-robbert/robbert-detalhes.png" class="img-responsive" alt="Details of the book cover">
+						<img src="../images/projects/2023-04-18-robbert/img2.png" class="img-responsive" alt="Robbert page">
+					</p>
+				</div>
+				<div class="col-md-6">
+					<p>
+						<img src="../images/projects/2023-04-18-robbert/img3.png" class="img-responsive" alt="Robbert page">
+					</p>
+				</div>
+				<div class="col-md-12">
+					<p>
+						<img src="../images/projects/2023-04-18-robbert/img4.png" class="img-responsive" alt="Robbert page">
+                    </p>
+				</div>
+				<div class="col-md-6">
+					<p>
+						<img src="../images/projects/2023-04-18-robbert/img5.png" class="img-responsive" alt="Robbert page">
+					</p>
+				</div>
+				<div class="col-md-6">
+					<p>
+						<img src="../images/projects/2023-04-18-robbert/img6.png" class="img-responsive" alt="Robbert page">
+					</p>
+				</div>
+				<div class="col-md-12">
+					<p>
+						<img src="../images/projects/2023-04-18-robbert/img7.png" class="img-responsive" alt="Robbert page">
+                    </p>
+				</div>
+				<div class="col-md-6">
+					<p>
+						<img src="../images/projects/2023-04-18-robbert/img8.png" class="img-responsive" alt="Robbert page">
+					</p>
+				</div>
+				<div class="col-md-6">
+					<p>
+						<img src="../images/projects/2023-04-18-robbert/img9.png" class="img-responsive" alt="Robbert page">
+					</p>
+				</div>
+				<div class="col-md-12">
+					<p>
+						<img src="../images/projects/2023-04-18-robbert/img10.png" class="img-responsive" alt="Robbert page">
                     </p>
 				</div>
 					<!-- <div class="testimony animate-box">
