--- a/index.html
+++ b/index.html
@@ -150,6 +150,18 @@
 							</div>
 						</a>
 					</div>
+					<div class="col-md-4 text-center">
+						<a class="work" href="projects/2024-06-27-detectives.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/detectives-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Detectives of light</h3>
+										<span class="cat">Children's Book illustration</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
 
 					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2023-02-06-eyes-book.html">
